# uv-copier-package-demo

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  test.yml
