[project]  # https://packaging.python.org/en/latest/specifications/pyproject-toml/
name = "marty_mcfly"
version = "0.0.0"
description = "An example of a Python package that was scaffolded with Poetry Copier"
authors = []
readme = "README.md"
requires-python = ">=3.14.3,<4.0"
dependencies = [
    
    "pydantic (>=2.12.5)",
]

[project.urls]
homepage = "https://github.com/lukin0110/poetry-copier-package-demo/"
source = "https://github.com/lukin0110/poetry-copier-package-demo/"

[build-system]  # https://docs.astral.sh/uv/concepts/build-backend/
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage[toml] (>=7.13.4,<8.0.0)",
    "ipython (>=8.29.0)",
    "ty (>=0.0.19)",
    "poethepoet (>=0.29.0)",
    "pre-commit (>=4.5.1)",
    "pytest (>=8.4.2)",
    "pytest-clarity (>=1.0.1)",
    "pytest-mock (>=3.15.1)",
    "ruff (>=0.15.2)",
    "safety (>=3.7.0,<4.0.0)",
    "typeguard (>=4.5.1)",
]

[tool.coverage.report]  # https://coverage.readthedocs.io/en/latest/config.html#report
# TODO: please raise the bar :)
fail_under = 0
precision = 1
show_missing = true
skip_covered = true

[tool.coverage.run]  # https://coverage.readthedocs.io/en/latest/config.html#run
branch = true
command_line = "--module pytest"
data_file = "reports/.coverage"
source = ["src"]

[tool.coverage.xml]  # https://coverage.readthedocs.io/en/latest/config.html#xml
output = "reports/coverage.xml"

[tool.ty.environment]  # https://docs.astral.sh/ty/configuration/
python-version = "3.14"
root = ["./src"]

[tool.ty.terminal]
output-format = "github"

[tool.ty.rules]
unused-ignore-comment = "warn"

[tool.pytest.ini_options]  # https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
addopts = "--color=yes --doctest-modules --exitfirst --failed-first --strict-config --strict-markers --typeguard-packages=marty_mcfly --verbosity=2 --junitxml=reports/pytest.xml"
filterwarnings = ["error", "ignore::DeprecationWarning"]
testpaths = ["src", "tests"]
xfail_strict = true
log_file_level = "info"
pythonpath = "src"

[tool.ruff]  # https://github.com/charliermarsh/ruff
fix = true
line-length = 120
src = ["src", "tests"]
target-version = "py313"
force-exclude = true  # https://docs.astral.sh/ruff/settings/#force-exclude
preview = true  # https://docs.astral.sh/ruff/preview/

[tool.ruff.lint]  # https://github.com/charliermarsh/ruff
ignore = ["D10", "D203", "D213", "E501", "EM101", "EM102", "FBT001", "ISC001", "RET504", "S101", "TRY003", "TRY300", "W505"]
select = ["A", "ASYNC", "B", "BLE", "C4", "C90", "D", "DTZ", "E", "EM", "ERA", "F", "FBT", "FLY", "FURB", "G", "I", "ICN", "INP", "INT", "ISC", "LOG", "N", "NPY", "PERF", "PGH", "PIE", "PLC", "PLE", "PLR", "PLW", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "S", "SIM", "SLF", "SLOT", "T10", "T20", "TCH", "TID", "TRY", "UP", "W", "YTT"]
unfixable = ["ERA001", "F401", "F841", "T201", "T203"]  # https://docs.astral.sh/ruff/settings/#unfixable

[tool.ruff.lint.extend-per-file-ignores] # https://docs.astral.sh/ruff/settings/#extend-per-file-ignores
# Ignore missing __init__.py files in tests.
"tests/*" = ["INP001", "PLR2004"]

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pep8-naming]
# Allow Pydantic's `@validator` decorator to trigger class method treatment.
classmethod-decorators = ["classmethod", "pydantic.validator", "pydantic.root_validator"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poe.tasks] # https://poethepoet.natn.io/index.html
    [tool.poe.tasks.lint]
    help = "Lint this package"

    [[tool.poe.tasks.lint.sequence]]
    shell = '[ -d ".git" ] || { echo "\n\\033[0;31mGit is not initialized in this directory. Please run \"git init\" to fix linting.\\033[0m\n"; exit 1; }'

    [[tool.poe.tasks.lint.sequence]]
    cmd = """
    pre-commit run
        --all-files
        --color always
    """


    [tool.poe.tasks.safety]
    help = "Run safety checks on this package"
    shell = "safety scan --continue-on-error --full-report"


    [tool.poe.tasks.test]
    help = "Test this package"

    [[tool.poe.tasks.test.sequence]]
    cmd = "coverage run"

    [[tool.poe.tasks.test.sequence]]
    cmd = "coverage report"

    [[tool.poe.tasks.test.sequence]]
    cmd = "coverage xml"
